--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -60,7 +60,7 @@
                                                 <button [routerLink]="['product/' + product.id]" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger" (click)="onDelete(product)">
+                                                <button class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)=setProducttoDelete(product)>
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
@@ -75,3 +75,22 @@
         </div>
     </div>
 </div>
+<div class="modal" id="myModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title font-weight-bold">CONFIRMATION REQUIRED</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Do you really want to delete this product?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="onDelete(product)" data-dismiss="modal">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
