--- a/src/app/common/chart/chart.component.css
+++ b/src/app/common/chart/chart.component.css
@@ -10,3 +10,8 @@
   align-items: center;
   justify-content: center;
 }
+
+/* .chart {
+  background-color: rgba(236, 239, 241, 0.7);
+  border-radius: 3px;
+} */
