--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -8,17 +8,25 @@
                         <p class="card-category">List of current orders.</p>
                     </div>
                     <div class="card my-0 px-3">
-                        <button [routerLink]="['/order/0']" class="btn btn-primary my-3">
+                        <button [routerLink]="['/order/'+'0']" class="btn btn-primary my-3">
                             Create new order
                         </button>
                     </div>
                     <div class="card-body col-6 d-flex">
-                        <input name="phrase" (keyup)="onChangePhrase($event)" class="form-control" type="text"
-                            placeholder="Enter filtering phrase...">
+                        <input id="phrase" name="phrase" (keyup)="onChangePhrase($event)" class="form-control"
+                            type="text" placeholder="Enter phrase..."
+                            [disabled]="filterKey==='active' || filterKey==='featured'">
                         <select class="custom-select ml-2" (change)="onChangeKey($event)">
-                            <option *ngFor="let attribute of attributes | keyvalue:originalOrder"
-                                [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by
-                                {{attribute.value}}</option>
+                            <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                <option *ngIf="attribute.key!=='featured' && attribute.key!=='active'"
+                                    [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by
+                                    {{attribute.value}}
+                                </option>
+                                <option *ngIf="attribute.key==='featured'" [value]="attribute.key">Show
+                                    {{attribute.value}} only</option>
+                                <option *ngIf="attribute.key==='active'" [value]="attribute.key">Show
+                                    {{attribute.value}} only</option>
+                            </ng-container>
                         </select>
                     </div>
                     <div class="card-body">
@@ -34,16 +42,49 @@
                                 <tbody>
                                     <tr *ngFor="let order of orderList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
                                         <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                            {{order[attribute.key]}}</td>
-                                        <td>
-                                            <div class="btn-group">
-                                                <button [routerLink]="" class="btn btn-info">
-                                                    <i class="fa fa-pencil"></i>
-                                                </button>
-                                                <button class="btn btn-danger" (click)="onDelete(order)">
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </div>
+                                            <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                                <td
+                                                    *ngIf="attribute.key!=='featured' && attribute.key!=='active' && attribute.key!=='catID'">
+                                                    {{order[attribute.key]}}</td>
+                                                <td *ngIf="attribute.key==='catID'"
+                                                    (click)="getCategory(order[attribute.key])" class="clickable" 
+                                                    [ngbPopover]="popContent" container="body" animation="true" placement="bottom"
+                                                    triggers="manual" #p="ngbPopover" (click)="p.open()"
+                                                    [popoverTitle]="popTitle">{{order[attribute.key]}}</td>
+                                                <ng-template #popContent>
+                                                    <ng-container *ngIf="category$ | async">
+                                                        <div class="card user-card">
+                                                            <div #popTitle class="card-header text-primary text-center">
+                                                                {{attribute.value}} details</div>
+                                                            <div class="card-body">
+                                                                <p><b>{{categoryAttributes.id}}:</b> {{category.id}}</p>
+                                                                <p><b>{{categoryAttributes.name}}:</b> {{category.name}}</p>
+                                                                <p><b>{{categoryAttributes.description}}</b>
+                                                                    {{category.description}}</p>
+                                                            </div>
+                                                        </div>
+                                                    </ng-container>
+                                                </ng-template>
+                                                <td *ngIf="attribute.key==='featured' && order[attribute.key]"><i
+                                                        class="fa fa-check"></i></td>
+                                                <td *ngIf="attribute.key==='featured' && !order[attribute.key]"><i
+                                                        class="fa fa-times"></i></td>
+                                                <td *ngIf="attribute.key==='active' && order[attribute.key]"><i
+                                                        class="fa fa-check"></i></td>
+                                                <td *ngIf="attribute.key==='active' && !order[attribute.key]"><i
+                                                        class="fa fa-times"></i></td>
+                                            </ng-container>
+                                            <td>
+                                                <div class="btn-group">
+                                                    <button [routerLink]="['order/' + order.id]" class="btn btn-info">
+                                                        <i class="fa fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-danger" data-toggle="modal"
+                                                        data-target="#confirmationDialog"
+                                                        (click)=setOrdertoDelete(order)>
+                                                        <i class="fa fa-trash"></i>
+                                                    </button>
+                                                </div>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -51,6 +92,31 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="confirmationDialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger font-weight-bold">CONFIRMATION REQUIRED</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p><strong>Are you sure you want to delete <span class="text-primary">{{order.name}}</span>?</strong>
+                </p>
+                <p>All information associated to this order will be permanently deleted.
+                    <span class="text-danger">This operation cannot be undone.</span>
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-primary" id="cancelButton"
+                    data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" (click)="onDelete(product)"
+                    data-dismiss="modal">Delete</button>
             </div>
         </div>
     </div>
