--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <nav class="pull-left">
             <ul>
                 <li>
-                    <a href="#">
+                    <a [routerLink]="'/about'">
                         About Us
                     </a>
                 </li>
