--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -41,7 +41,6 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let order of orderList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
-                                        <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                                 <td
                                                     *ngIf="attribute.key!=='featured' && attribute.key!=='active' && attribute.key!=='catID'">
@@ -115,7 +114,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-primary" id="cancelButton"
                     data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" (click)="onDelete(product)"
+                <button type="button" class="btn btn-danger" (click)="onDelete(order)"
                     data-dismiss="modal">Delete</button>
             </div>
         </div>
