--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -8,45 +8,77 @@
                         <p class="card-category">List of customers.</p>
                     </div>
                     <div class="card my-0 px-3">
-                        <button [routerLink]="['/customer/0']" class="btn btn-primary my-3">
+                        <button [routerLink]="['/customer/0']"
+                            class="btn btn-primary my-3">
                             Create new customer
                         </button>
                     </div>
                     <div class="card-body col-6 d-flex">
-                        <input name="phrase" (keyup)="onChangePhrase($event)" class="form-control" type="text"
+                        <input name="phrase" (keyup)="onChangePhrase($event)"
+                            class="form-control" type="text"
                             placeholder="Enter filtering phrase...">
-                        <select class="custom-select ml-2" (change)="onChangeKey($event)">
-                            <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                <option *ngIf="attribute.value.type!='check'" [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by {{attribute.value.title}}</option>
-                                <option *ngIf="attribute.value.type==='check'" [value]="attribute.key+',1'" [selected]="setDefault(attribute.key)">{{attribute.value.title}} is true</option>
-                                <option *ngIf="attribute.value.type==='check'" [value]="attribute.key+',0'" [selected]="setDefault(attribute.key)">{{attribute.value.title}} is false</option>
+                        <select class="custom-select ml-2"
+                            (change)="onChangeKey($event)">
+                            <ng-container
+                                *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                <option *ngIf="attribute.value.type!='check'"
+                                    [value]="attribute.key"
+                                    [selected]="setDefault(attribute.key)">
+                                    Filter by {{attribute.value.title}}</option>
+                                <option *ngIf="attribute.value.type==='check'"
+                                    [value]="attribute.key+',1'"
+                                    [selected]="setDefault(attribute.key)">
+                                    {{attribute.value.title}} is true</option>
+                                <option *ngIf="attribute.value.type==='check'"
+                                    [value]="attribute.key+',0'"
+                                    [selected]="setDefault(attribute.key)">
+                                    {{attribute.value.title}} is false</option>
                             </ng-container>
                         </select>
                     </div>
-                    <div class="card-body">
+                    <div *ngIf="updating" class="d-flex justify-content-center">
+                        <mat-spinner></mat-spinner>
+                    </div>
+                    <div *ngIf="!updating" class="card-body">
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class="text-primary">
-                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder" (click)="onColumnSelect(attribute.key)">
+                                    <th *ngFor="let attribute of attributes | keyvalue:originalOrder"
+                                        (click)="onColumnSelect(attribute.key)">
                                         {{attribute.value.title}}
-                                        <span *ngIf="attribute.value.order === 'ascending'"  class="material-icons"><i class="fa fa-angle-up"></i></span>
-                                        <span *ngIf="attribute.value.order === 'descending'" class="material-icons"><i class="fa fa-angle-down"></i></span>
+                                        <span
+                                            *ngIf="attribute.value.order === 'ascending'"
+                                            class="material-icons"><i
+                                                class="fa fa-angle-up"></i></span>
+                                        <span
+                                            *ngIf="attribute.value.order === 'descending'"
+                                            class="material-icons"><i
+                                                class="fa fa-angle-down"></i></span>
                                     </th>
                                     <th>Buttons</th>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let customer of customerList$ | async | filter:phrase:filterKey:filterSubKey | sorter:sorterKey:sortDirection:sorterSubKey">
-                                        <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                            <span *ngIf="attribute.value.type==='text' && !attribute.value.obj">{{customer[attribute.key]}}</span>
-                                            <span *ngIf="attribute.value.type==='text' && attribute.value.obj">{{customer[attribute.value.obj][attribute.key]}}</span>
-                                            <span *ngIf="attribute.value.type==='check' && customer[attribute.key]" class="material-icons">check</span>
+                                    <tr
+                                        *ngFor="let customer of customerList$ | async | filter:phrase:filterKey:filterSubKey | sorter:sorterKey:sortDirection:sorterSubKey">
+                                        <td
+                                            *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                            <span
+                                                *ngIf="attribute.value.type==='text' && !attribute.value.obj">{{customer[attribute.key]}}</span>
+                                            <span
+                                                *ngIf="attribute.value.type==='text' && attribute.value.obj">{{customer[attribute.value.obj][attribute.key]}}</span>
+                                            <span
+                                                *ngIf="attribute.value.type==='check' && customer[attribute.key]"
+                                                class="material-icons">check</span>
                                         </td>
                                         <td>
                                             <div class="btn-group special">
-                                                <button [routerLink]="['/customer', customer.id]" class="btn btn-info">
+                                                <button
+                                                    [routerLink]="['/customer', customer.id]"
+                                                    class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger" (click)="onDelete(customer)">
+                                                <button class="btn btn-danger"
+                                                    (click)="onDelete(customer)">
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
