--- a/src/app/pages/categroy-list/categroy-list.component.html
+++ b/src/app/pages/categroy-list/categroy-list.component.html
@@ -8,7 +8,7 @@
                         <p class="card-category">List of categories for orders.</p>
                     </div>
                     <div class="card my-0 px-3">
-                        <button [routerLink]="" class="btn btn-primary my-3">
+                        <button [routerLink]="'/category/0'" class="btn btn-primary my-3">
                             Create new Category
                         </button>
                     </div>
@@ -45,10 +45,11 @@
                                         *ngFor="let category of categoryList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
                                         <td
                                             *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                            {{ category[attribute.key] }}</td>
+                                            {{ category[attribute.key] }}</td>                                            
                                         <td>
                                             <div class="btn-group">
-                                                <button [routerLink]=""
+                                                <button [routerLink]="['/category/',category.id]" 
+                                                
                                                     class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
@@ -58,7 +59,9 @@
                                                 </button>
                                             </div>
                                         </td>
+                                        <!-- {{ category |json}} -->
                                     </tr>
+                                    
                                 </tbody>
                             </table>
                         </div>
