--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -9,33 +9,27 @@
                             stock.</p>
                     </div>
                     <div class="card my-0 px-3">
-                        <button [routerLink]="['product/'+'0']"
-                            class="btn btn-primary my-3">
+                        <button [routerLink]="['product/'+'0']" class="btn btn-primary my-3">
                             Create new product
                         </button>
                     </div>
+                    <div class="card-body col-6 d-flex my-0">
+                        <button class="btn btn-primary" (click)="scroll('summaries')">Scroll To Summaries</button>
+                    </div>
                     <div class="card-body col-6 d-flex">
-                        <input id="phrase" name="phrase"
-                            (keyup)="onChangePhrase($event)"
-                            class="form-control" type="text"
-                            placeholder="Enter phrase..."
+                        <input id="phrase" name="phrase" (keyup)="onChangePhrase($event)" class="form-control"
+                            type="text" placeholder="Enter phrase..."
                             [disabled]="filterKey==='active' || filterKey==='featured'">
-                        <select class="custom-select ml-2"
-                            (change)="onChangeKey($event)">
-                            <ng-container
-                                *ngFor="let attribute of attributes | keyvalue:originalOrder">
-                                <option
-                                    *ngIf="attribute.key!=='featured' && attribute.key!=='active'"
-                                    [value]="attribute.key"
-                                    [selected]="setDefault(attribute.key)">
+                        <select class="custom-select ml-2" (change)="onChangeKey($event)">
+                            <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                <option *ngIf="attribute.key!=='featured' && attribute.key!=='active'"
+                                    [value]="attribute.key" [selected]="setDefault(attribute.key)">
                                     Filter by
                                     {{attribute.value}}
                                 </option>
-                                <option *ngIf="attribute.key==='featured'"
-                                    [value]="attribute.key">Show
+                                <option *ngIf="attribute.key==='featured'" [value]="attribute.key">Show
                                     {{attribute.value}} only</option>
-                                <option *ngIf="attribute.key==='active'"
-                                    [value]="attribute.key">Show
+                                <option *ngIf="attribute.key==='active'" [value]="attribute.key">Show
                                     {{attribute.value}} only</option>
                             </ng-container>
                         </select>
@@ -50,40 +44,29 @@
                                     <th *ngFor="let attribute of attributes | keyvalue:originalOrder"
                                         (click)="onColumnSelect(attribute.key)">
                                         {{attribute.value}}
-                                        <span
-                                            *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i
+                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i
                                                 class="fa fa-angle-up"></i></span>
-                                        <span
-                                            *ngIf="(sortOrder[attribute.key] === 'descending' )"><i
+                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i
                                                 class="fa fa-angle-down"></i></span>
                                     </th>
                                 </thead>
                                 <tbody>
                                     <tr
                                         *ngFor="let product of productList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
-                                        <ng-container
-                                            *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                        <ng-container *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             <td
                                                 *ngIf="attribute.key!=='featured' && attribute.key!=='active' && attribute.key!=='catID'">
                                                 {{product[attribute.key]}}</td>
                                             <td *ngIf="attribute.key==='catID'"
-                                                (click)="getCategory(product[attribute.key])"
-                                                class="clickable"
-                                                [ngbPopover]="popContent"
-                                                container="body"
-                                                animation="true"
-                                                placement="bottom"
-                                                triggers="manual"
-                                                #p="ngbPopover"
-                                                (click)="p.open()"
+                                                (click)="getCategory(product[attribute.key])" class="clickable"
+                                                [ngbPopover]="popContent" container="body" animation="true"
+                                                placement="bottom" triggers="manual" #p="ngbPopover" (click)="p.open()"
                                                 [popoverTitle]="popTitle">
                                                 {{product[attribute.key]}}</td>
                                             <ng-template #popContent>
-                                                <ng-container
-                                                    *ngIf="category$ | async">
+                                                <ng-container *ngIf="category$ | async">
                                                     <div class="card user-card">
-                                                        <div #popTitle
-                                                            class="card-header text-primary text-center">
+                                                        <div #popTitle class="card-header text-primary text-center">
                                                             {{attribute.value}}
                                                             details</div>
                                                         <div class="card-body">
@@ -100,32 +83,25 @@
                                                     </div>
                                                 </ng-container>
                                             </ng-template>
-                                            <td
-                                                *ngIf="attribute.key==='featured' && product[attribute.key]">
+                                            <td *ngIf="attribute.key==='featured' && product[attribute.key]">
                                                 <i class="fa fa-check"></i>
                                             </td>
-                                            <td
-                                                *ngIf="attribute.key==='featured' && !product[attribute.key]">
+                                            <td *ngIf="attribute.key==='featured' && !product[attribute.key]">
                                                 <i class="fa fa-times"></i>
                                             </td>
-                                            <td
-                                                *ngIf="attribute.key==='active' && product[attribute.key]">
+                                            <td *ngIf="attribute.key==='active' && product[attribute.key]">
                                                 <i class="fa fa-check"></i>
                                             </td>
-                                            <td
-                                                *ngIf="attribute.key==='active' && !product[attribute.key]">
+                                            <td *ngIf="attribute.key==='active' && !product[attribute.key]">
                                                 <i class="fa fa-times"></i>
                                             </td>
                                         </ng-container>
                                         <td>
                                             <div class="btn-group">
-                                                <button
-                                                    [routerLink]="['product/' + product.id]"
-                                                    class="btn btn-info">
+                                                <button [routerLink]="['product/' + product.id]" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger"
-                                                    data-toggle="modal"
+                                                <button class="btn btn-danger" data-toggle="modal"
                                                     data-target="#confirmationDialog"
                                                     (click)=setProducttoDelete(product)>
                                                     <i class="fa fa-trash"></i>
@@ -136,26 +112,49 @@
                                 </tbody>
                             </table>
                         </div>
+                        <hr>
+                        <div class="table-responsive">
+                            <table class="table" id="summaries">
+                                <thead class="text-primary">
+                                    <th>Total # of Different Products</th>
+                                    <th>Total # of Items on Stock</th>
+                                    <th>Total Value of Stock</th>
+                                    <th>Total # of Active Items</th>
+                                    <th>Total # of Featured Items</th>
+                                    <th>Items in Categories 1/2/3/4/5</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>{{productSummaryData.totalProducts}}</td>
+                                        <td>{{productSummaryData.totalItems}}</td>
+                                        <td>{{productSummaryData.totalValue}}</td>
+                                        <td>{{productSummaryData.totalActive}}</td>
+                                        <td>{{productSummaryData.totalFeatured}}</td>
+                                        <td>{{productSummaryData.totalinCategories}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
 <div class="modal" id="confirmationDialog" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title text-danger font-weight-bold">
                     CONFIRMATION REQUIRED</h5>
-                <button type="button" class="close" data-dismiss="modal"
-                    aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p><strong>Are you sure you want to delete <span
-                            class="text-primary">{{product.name}}</span>?</strong>
+                <p><strong>Are you sure you want to delete <span class="text-primary">{{product.name}}</span>?</strong>
                 </p>
                 <p>All information associated to this product will be
                     permanently deleted.
@@ -164,10 +163,9 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-primary"
-                    id="cancelButton" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger"
-                    (click)="onDelete(product)"
+                <button type="button" class="btn btn-outline-primary" id="cancelButton"
+                    data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" (click)="onDelete(product)"
                     data-dismiss="modal">Delete</button>
             </div>
         </div>
